--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ is it a [[baby boy]] or a [[baby girl]]?</tw-passagedata><tw-passagedata pid="13
 
 Dad says you need to be a role model that help your little brother out
 
-[[Go to elemantry school-&gt;boy version]]</tw-passagedata><tw-passagedata pid="14" name="baby girl (org)" tags="" position="1000,1150" size="100,100">WAAAA
+[[Go to elemantry school-&gt;boy version]]</tw-passagedata><tw-passagedata pid="14" name="baby girl" tags="" position="1000,1150" size="100,100">WAAAA
 
 why is my little sister always stealing my toys
 
@@ -127,7 +127,13 @@ and said your brother is going to be a great artist in the future
 [[jump to 11 year old]]</tw-passagedata><tw-passagedata pid="18" name="tp-g" tags="" position="1000,1400" size="100,100">You dad say he is just a little kid and blame you for not taking care of your own stuff
 and hurry you up to go to school
 
-[[next]]</tw-passagedata><tw-passagedata pid="19" name="next" tags="" position="1000,1525" size="100,100">You are 10 years old, you found out mom is pregnant again and dad is very happy this time because the doctor says it is a boy</tw-passagedata><tw-passagedata pid="20" name="jump to 11 year old" tags="" position="750,1525" size="100,100">lil brother is going to elemantry school too, you are tasked to take him with you
+[[next]]</tw-passagedata><tw-passagedata pid="19" name="next" tags="" position="1000,1525" size="100,100">When you are 10 years old your mother is pregnant again!!!
+
+Your dad is very happy and he told you that you are going to have a little brother
+
+So you and your little sister all told your classmates about it
+
+[[continue-&gt;brother born]]</tw-passagedata><tw-passagedata pid="20" name="jump to 11 year old" tags="" position="750,1525" size="100,100">lil brother is going to elemantry school too, you are tasked to take him with you
 You live kinda far from the elemantry school and you have always walked to school the past years and you can always managed to get there on time
 
 but you are late for the first time and your teacher scolds you in front of the whole class.
@@ -446,7 +452,7 @@ More at peace.
 And you continue exploring your life, on your terms.
 
 [[FIN]]
-</tw-passagedata><tw-passagedata pid="36" name="FIN" tags="" position="675,3275" size="100,100">
+</tw-passagedata><tw-passagedata pid="36" name="FIN" tags="" position="975,3400" size="100,100">
 Thank you for playing  
 **Survival as an Asian Girl**
 
@@ -461,10 +467,523 @@ You’re never alone.
 
 
 [[Play again-&gt;Start]]
-</tw-passagedata><tw-passagedata pid="37" name="baby girl" tags="" position="1125,1275" size="100,100">oopsie it&#39;s not finished yet
-please go get a lil brother
+</tw-passagedata><tw-passagedata pid="37" name="brother born" tags="" position="1000,1650" size="100,100">Your dad packed a lot of clothes for mom because she’s about to give birth.  
+He sends you and your little sister to grandma’s house.
 
-[[baby boy]]</tw-passagedata></tw-storydata>
+Your little sister eats a lot — and fast.
+
+Grandma looks at her and says,  
+**“You eat like a fake boy. No one’s going to steal your food.”**
+
+Your sister laughs,  
+**“Grandma’s food is so good, I can’t stop!”**
+
+Grandma looks kind of happy.  
+Your sister always knows how to make people happy.
+
+We stayed for a couple of days.  
+Finally, we can go home — and meet our new baby brother.
+
+[[Go home-&gt;sister returns home]]
+</tw-passagedata><tw-passagedata pid="38" name="sister returns home" tags="" position="1000,1775" size="100,100">It&#39;s not your first time seeing a new born but damn babies are really ugly when they are born
+
+[[contineu-&gt;brother 3 year old]]</tw-passagedata><tw-passagedata pid="39" name="brother 3 year old" tags="" position="1000,1900" size="100,100">you are playing your free McDonald children&#39;s meal toys with cute little sister
+
+you take the chihuahua doll:
+**I am the super villain going to kidnap all other dogs**
+
+little sister:
+**I have the great dan super hero, thou shall not pass**
+
+it was all fun and game until an enormous creature appeared and pushed all the toys around and laugh
+
+little sister shout to little brother:
+**ay yo stop! what are you doing**
+
+somehow things get&#39;s kinda bad.....
+
+[[Watch it happen]]  [[stop the mess]]
+</tw-passagedata><tw-passagedata pid="40" name="Watch it happen" tags="" position="1000,2025" size="100,100">little brother started grabbing whatever toys he saw 
+the little sister got angry and tryna get it back
+
+somehow little brother couldn&#39;t stand still on his short legs and fell backward
+you tryna catch him but your were too slow
+
+he started to blast in huge cryers
+
+the next thing you remembered is your parent&#39;s slippers flying to you and little sister&#39;s directions
+
+mom grabbed the little brother and tryna comfort him
+
+your dad got really mad and said both you and your sister was horrible and especially you
+
+no one was saved that day 
+
+[[continue-&gt;frustration]]</tw-passagedata><tw-passagedata pid="41" name="stop the mess" tags="" position="1125,2025" size="100,100">you reasonably tryna explain to your brother that if he wanna play he should join peacefully 
+
+and let you him along
+**however...**
+
+he kept taking whatever toys the little sister has in her hand
+
+it soon leads to a fought, huge crying
+
+
+as soon as they started crying, your parents rushed to the scene and blamed you right away without you explaining the situation
+
+[[continue-&gt;frustration]]</tw-passagedata><tw-passagedata pid="42" name="frustration" tags="" position="1050,2175" size="100,100">This exact thing happens over and over again.
+
+Your little brother messes something up.  
+Your sister yells.  
+You try to hold it together.
+
+But in the end — the adults only see one thing:
+
+**You were supposed to be in control.**
+
+You were supposed to &quot;know better.&quot;  
+To &quot;keep the peace.&quot;  
+To &quot;act like an older sister.&quot;
+
+But you&#39;re a kid too.
+
+What do you do next?
+
+[[Start shutting down emotionally-&gt;silent path]]  
+
+[[Start talking back more like your sister-&gt;rebellion path]]
+</tw-passagedata><tw-passagedata pid="43" name="silent path" tags="" position="925,2425" size="100,100">You became the perfect kid —  
+*“the other people’s child”* that adults always talk about.
+
+You’re studious.  
+You work hard.  
+You only devote time to family and school.
+
+Family stresses you out a lot, but you keep everything under control —  
+because you know your little brother always causes trouble.
+
+Sometimes, you overhear your dad comparing your sister to you:
+
+**“Why can’t you be like your sister? She doesn’t cause any trouble at all.”**
+
+You don’t agree with him.  
+Not at all.
+
+You like the way your sister lives —  
+honest, expressive, loud when things are unfair.
+
+But you don’t say that out loud.
+
+You just smile and do the dishes.
+
+[[Keep going-&gt;middle school stress]]
+</tw-passagedata><tw-passagedata pid="44" name="rebellion path" tags="" position="1175,2425" size="100,100">You’ve always put your siblings first —  
+because that’s what you were taught.
+
+Be patient.  
+Be helpful.  
+Be the example.
+
+But lately... something inside you is shifting.
+
+You’re tired of it.
+
+Tired of all the *“Girls should do this.”*  
+Tired of *“Don’t act like that, you&#39;re a girl.”*  
+Tired of being the one who adjusts while others take.
+
+For once, you want to have time — for yourself.
+
+Not for school.  
+Not for your brother.  
+Not to please someone else.
+
+Something in your heart changes.
+
+It’s small. But it’s loud.
+
+[[continue-&gt;middle school guys]]
+</tw-passagedata><tw-passagedata pid="45" name="middle school stress" tags="" position="1050,2550" size="100,100">Middle school hits hard.
+
+Your backpack is heavier, your classes are harder, and your responsibilities at home don’t go away.
+
+And one day — it happens.
+
+Your first period.
+
+You wake up feeling sore.  
+Your whole body aches.  
+You almost think you&#39;re dying — until you see the blood on your bedsheet.
+
+You panic and start washing the sheet yourself.
+
+Mom sees you and says,  
+**“Congratulations. You’re halfway an adult now.”**
+
+She takes over the washing, hands you a pad, and tells you to get ready for school.
+
+No comfort. No instructions. Just expectations.
+
+You try to act normal all day, but PE class is the worst.
+
+You sit out, hoping no one notices.
+
+But the boys do.
+
+**“Are you on your period?”**  
+**“Ewww, gross!”**  
+**“Don’t bleed on the bench, okay?”**
+
+They laugh. Loudly.
+
+You look down. You stay quiet.
+
+No one stands up for you.
+
+[[Continue-&gt;high school burnout]] 
+
+
+</tw-passagedata><tw-passagedata pid="46" name="high school burnout" tags="" position="1050,2675" size="100,100">Life gets extra serious in high school.
+
+You start worrying about your future —  
+not just for yourself, but for your family too.
+
+Your dad once dreamed of studying abroad.  
+Now, he wants *you* to live that dream.
+
+So you take it on.
+
+You wake up at 5 a.m. to catch the school bus.  
+You stay up late cramming for TOEFL and SAT.  
+On weekends, you go to cram school.
+
+Your schedule gets so tight you wish you could split time into pieces.
+
+Your dad puts a lot of pressure on you —  
+but neither he nor your mom knows how the process works.
+
+So you figure it out yourself.  
+You talk to your school adviser.  
+You track the deadlines.  
+You prepare every document alone.
+
+And still — your parents keep giving you advice,  
+acting like they know best.
+
+They’ve never done any of it.  
+But they expect perfection.
+
+You nod, smile, and carry on.
+
+[[Keep pushing for your dream of studying abroad-&gt;college-breakdown-g]]  
+[[Give up the idea and stay local-&gt;local university path]]
+
+</tw-passagedata><tw-passagedata pid="47" name="college-breakdown-g" tags="" position="1050,2800" size="100,100">Being the oldest sibling — and the first to study abroad —  
+you’re tasked with carrying the honor of the entire family.
+
+And for a while… you do.
+
+You have some of the best years of your life.
+
+You make friends who see you for who you are.  
+You grow, laugh, explore.
+
+You win honors from your department.  
+Your professors praise your work.
+
+Your parents don’t really know what those awards mean —  
+but for once, they’re *truly proud*.
+
+You think maybe, just maybe, you did something for yourself.
+
+But then graduation comes.
+
+And your parents say:  
+**“It’s time to come home.”**
+
+[[Consider staying abroad-&gt;conflict over future]]  
+[[Accept and prepare to return-&gt;coming home]]
+</tw-passagedata><tw-passagedata pid="48" name="local university path" tags="" position="1175,2800" size="100,100">You give up the idea of studying abroad.
+
+Maybe it’s the stress.  
+Maybe it’s the cost.  
+Maybe it’s realizing that you’re doing it more for them than for you.
+
+You apply to universities nearby.
+
+When your acceptance letter comes, your dad shrugs.  
+**“It’s okay. At least you won’t be far from home.”**
+
+You move into a shared dorm and start classes.  
+Every other weekend, you go home to help with your siblings.
+
+People say you’re lucky to stay close.  
+But you wonder if “close” also means *stuck*.
+
+Your brother gets into trouble again.  
+Your parents ask you to tutor him.
+
+Your sister is moody.  
+Your parents ask you to talk to her.
+
+You’re in college.  
+But it still feels like you never left.
+
+[[Try to balance school and family life-&gt;caregiver forever]]  
+[[Start feeling trapped and secretly plan to move away later-&gt;late rebellion path]]
+</tw-passagedata><tw-passagedata pid="49" name="caregiver forever" tags="" position="1112.5,2925" size="100,100">You graduate and find a stable job in the same city.
+
+Your parents are proud.  
+They introduce you as the daughter who “always does what’s right.”
+
+You help pay the bills.  
+You help with your siblings.  
+You never moved far.
+
+Eventually, you marry someone your parents chose —  
+the *perfect husband*, they say.
+
+You kind of just live your entire life by your parents’ will.
+
+And maybe… that’s okay.
+
+But some nights, when it’s quiet,  
+you lie in bed and wonder:
+
+**What would’ve happened if I had gone after my own dream?**
+
+[[FIN]]
+</tw-passagedata><tw-passagedata pid="50" name="late rebellion path" tags="" position="1237.5,2925" size="100,100">You start saving money in secret.
+
+You tell your family it’s for emergencies —  
+but really, it’s for a one-way ticket.
+
+Two years after graduating, you move out of your city.  
+Maybe even out of the country.
+
+You start cutting everyone off.
+
+Your parents are shocked.  
+Your siblings are confused.  
+But you feel… relief.
+
+For the first time, you breathe without asking for permission.
+
+You don’t know what’s ahead.  
+But for once, the path is yours.
+
+[[FIN]]
+
+</tw-passagedata><tw-passagedata pid="51" name="conflict over future" tags="" position="862.5,2925" size="100,100">You decide to stay abroad after graduation.
+
+Your dad is furious.  
+**“If you want to be independent, then be independent.”**
+
+He cuts all your financial support.
+
+You&#39;re still on a student visa —  
+you can only work part-time on campus.  
+It’s barely enough for rent and food.
+
+Applying for a visa extension costs $700.  
+You don’t have it.
+
+You take whatever jobs you can.  
+You eat the cheapest food.  
+You keep telling yourself it’s temporary.
+
+After months of scraping by,  
+you finally save enough for a plane ticket.
+
+And just like that —  
+you give in.
+
+You go home.
+
+[[Return defeated-&gt;coming home]]
+</tw-passagedata><tw-passagedata pid="52" name="coming home" tags="" position="987.5,2925" size="100,100">Staying home, you become the **free tutor** for your troublesome little brother.
+
+Your parents say he needs your help.  
+They say **you’re the only one he listens to.**
+
+Your little sister watches silently.
+
+She saw everything you went through —  
+and decided *not* to follow your path.
+
+She’s been rebellious for years.  
+Your parents gave up on her.
+
+But not on your brother.
+
+They help you find a job close to home,  
+so you’re always spinning between work, dinner, and tutoring.
+
+You don’t like this life.  
+Not one bit.
+
+Sometimes you try to talk to your sister about it.  
+You say you think your parents were wrong.
+
+She just looks at you, silently.
+
+She already knows.
+
+[[FIN]]
+</tw-passagedata><tw-passagedata pid="53" name="middle school guys" tags="" position="1175,2550" size="100,100">You did not like middle school at all.
+
+Everyone’s body started to change —  
+but the boys didn’t grow up, they just got louder.
+
+They wouldn’t leave the girls alone.
+
+They ranked them by appearance,  
+by body shape,  
+by voice,  
+by how they acted around boys.
+
+You hit puberty earlier than most.  
+And that made you a target.
+
+[[continue-&gt;small groups]]</tw-passagedata><tw-passagedata pid="54" name="small groups" tags="" position="1300,2675" size="100,100">Girls are weird.
+
+Some have been mistreated without realizing it.  
+Some decided to become the center of attention — even if it meant becoming the target.
+
+You *really* disliked the disrespectful boys.  
+The way they gave girls nicknames like trophies.  
+The way they laughed like it was all just a game.
+
+You tried to ignore them.
+
+But then something worse happened.
+
+Some girls started to get jealous.  
+They whispered rumors about you.  
+Twisted the truth just enough to sound believable.
+
+You tried to brush it off, but it spread.
+
+Soon, most of the girls stopped talking to you.
+
+Not because they hated you —  
+but because they were afraid of the mean girls.
+
+You weren’t just angry anymore.
+
+You were alone.
+
+[[Stand up for yourself-&gt;too much attitude]]  
+[[Stay distant and observe everything-&gt;watch quietly]]
+</tw-passagedata><tw-passagedata pid="55" name="too much attitude" tags="" position="1362.5,2800" size="100,100">One day, you talk to the mean girl.
+
+You don’t get her obsession with attention —  
+or why she turns on other girls.
+
+But you say what you need to say.
+
+Some girls hear you.
+
+Turns out, they were hurt by the same boys too.
+
+You’re still not popular.  
+But you&#39;re not alone anymore.
+
+[[continue-&gt;rebellious high school]]
+</tw-passagedata><tw-passagedata pid="56" name="watch quietly" tags="" position="1487.5,2800" size="100,100">You stop caring.
+
+You keep your distance and focus on yourself.
+
+You end up becoming friends with the quiet girls —  
+the ones who listen more than they speak.
+
+Middle school was lonely,  
+but you won a lot of awards.
+
+You’re kind of lonely.  
+But the recognition keeps you going.
+
+[[continue-&gt;rebellious high school]]
+</tw-passagedata><tw-passagedata pid="57" name="rebellious high school" tags="" position="1362.5,2925" size="100,100">High school gets intense.
+
+You do well in school —  
+but not in the subjects your dad cares about.
+
+He tells you,  
+**“Study math, science, physics, or biology. Be a doctor. Get a high-paying job.”**
+
+**“Humanities are a waste of time.”**
+
+But you’re drawn to the other side —  
+history, literature, philosophy.  
+You want to understand people, not just equations.
+
+He doesn’t get it.  
+You don’t back down.
+
+[[Apply to humanities and face the storm-&gt;family fight]]  
+[[Apply to science but secretly switch majors later-&gt;secret rebellion]]
+
+</tw-passagedata><tw-passagedata pid="58" name="family fight" tags="" position="1300,3050" size="100,100">You got into a good college —  
+one with a strong humanities program.
+
+You didn’t chase the highest salary.  
+You chased what you cared about.
+
+Now you’ve graduated.
+
+Your job doesn’t pay the most,  
+but you like what you do.  
+And that’s enough.
+
+To your parents, though, it’s not.  
+When they compare you to other people’s kids,  
+they lose.
+
+You became their failure.  
+But you have a life that’s yours.
+
+And your little sister?  
+She looks up to you.
+
+She gets it.
+
+She supports you.
+
+[[FIN]]
+</tw-passagedata><tw-passagedata pid="59" name="secret rebellion" tags="" position="1425,3050" size="100,100">You applied for a biology major.
+
+Your dad was proud.
+
+But what he didn’t know was —  
+you dropped those classes after the first quarter.
+
+You switched to humanities quietly.  
+No announcement. No fight.
+
+Just… your choice.
+
+You took the hit.  
+Your GPA dropped.  
+You had to figure it all out alone.
+
+But eventually — you found your people.  
+Your passion.
+
+You graduate,  
+get a job that feels like *you*,  
+and build a life without regret.
+
+Your parents still think you&#39;re in the “wrong” field.  
+They say, **“We only wanted the best for you.”**
+
+You nod and smile.
+
+But deep down,  
+you know you saved yourself.
+
+[[FIN]]
+</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
