--- a/index.html
+++ b/index.html
@@ -983,6 +983,14 @@ But deep down,
 you know you saved yourself.
 
 [[FIN]]
+</tw-passagedata><tw-passagedata pid="60" name="Untitled Passage" tags="" position="750,125" size="100,100">
+&lt;center&gt;
+&lt;h2&gt;Survival as an Asian Girl&lt;/h2&gt;
+[[Start]]
+
+&lt;/center&gt;
+
+
 </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
